@@ -5,7 +5,6 @@
     margin-bottom: 18px;
 }
 h1, h2, h3, h4, h5 { margin-bottom: 9px; }
-p, .alert-message p { margin-bottom: 18px; }
 #pending div { margin-left: 20px; }
 .alert-message.block-message { background-color: #faffc0; }
 .dashboard-links {
